fix(auth):user sign in sign up issue
